--- a/popup.html
+++ b/popup.html
@@ -14,9 +14,6 @@
     <header>
       <!-- Navigation stuff -->
       <section class="nav-type">
-        <!-- <button type="button" name="base64">Base64</button>
-        <button type="button" name="base64">JWT</button>
-        <button type="button" name="base64">Certificate</button> -->
         <label for="types">nCoder: </label>
         <select id="selector-types">
           <option value="base64">Base64</option>
@@ -27,15 +24,13 @@
     </header>
 
     <main>
-      <section class="input">
+      <section class="input" id="section-input">
         <textarea id="input-field" class="input-field" name="input" rows="8" cols="80" placeholder="Just paste your input here!"></textarea>
       </section>
 
-      <section class="output">
-        <!-- <div class="output-field" id="output-field">
-
-        </div> -->
+      <section class="output" id="section-output">
         <textarea id="output-field" class="output-field" name="output" rows="8" cols="80" placeholder="Output will appear here!"></textarea>
+        
       </section>
 
       <section class="input-buttons">
