--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
 
     <main>
       <section class="input" id="section-input">
-
+        
       </section>
 
       <section class="output" id="section-output">
@@ -33,8 +33,8 @@
       </section>
 
       <section class="input-buttons">
-        <button type="button" name="encode" class="btns-ncode" id="btn-encode">Encode</button>
-        <button type="button" name="decode" id="btn-decode" class="btns-ncode">Decode</button>
+        <button type="button" name="encode" class="btns btns-ncode" id="btn-encode">Encode</button>
+        <button type="button" name="decode" class="btns btns-ncode" id="btn-decode">Decode</button>
       </section>
     </main>
 
