Adding tests and creating initial version of certificate decoder!

--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
       <section class="output" id="section-output">
       </section>
 
-      <section class="input-buttons">
+      <section class="input-buttons" id="section-buttons">
         <button type="button" name="encode" class="btns btns-ncode" id="btn-encode">Encode</button>
         <button type="button" name="decode" class="btns btns-ncode" id="btn-decode">Decode</button>
       </section>
